@@ -24,10 +24,19 @@
 ; string[N]     == (char *)             [N>0]   [show only up to N bytes]
 ; ignore	== (any)			[ignore arg, output blank]
 ; type*		== (type *)			[pointer to any other type]
+; enum (key=value,key=value,...)		[enumeration, see below]
 
 ; Backwards-compatibility:
 ; string0	== (char *)			[same as string[retval]]
 ; stringN	== (char *)		[N>0]	[same as string[argN]]
+
+; Enumerations
+;
+; The syntax is a parenthesized list of key=value assignments, like so:
+;   enum (F_DUPFD=0,F_GETFD=1,F_SETFD=2)
+; an example usage might look like
+;   int fcntl(int,enum (F_DUPFD=0,F_GETFD=1,F_SETFD=2))
+;
 
 ; arpa/inet.h
 int inet_aton(string,addr);
