@@ -5,3 +5,4 @@ int func_strlen(+string[retval])
 void func_strfixed(string[4])
 void func_ppp(int***)
 void func_stringp(string*)
+void func_enum(enum (RED=0,GREEN=1,BLUE=2,CHARTREUSE=3,PETUNIA=4))
